--- a/CSS/main.css
+++ b/CSS/main.css
@@ -984,155 +984,245 @@ footer .rice {
     .content-container h2{
         font-size: 18px;
     }
-.content-container p{
-    font-size: 14px;
-}
-.hero{
-    margin-bottom: 30px;
-    margin-top: 30px;
-}
-.hero h4{
-    font-size: 40px;
-}
-.hero img{
-    margin-top: 60px;
-}
+    .content-container p{
+        font-size: 14px;
+    }
+    .hero{
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
+    .hero h4{
+        font-size: 40px;
+    }
+    .hero img{
+        margin-top: 60px;
+    }
 } 
 
 @media (max-width: 428px) {
-.hero {
-  flex-direction: column;
-  padding-top: 70px; 
-  margin: 20px;         
-  height: auto;      
+    .hero {
+    flex-direction: column;
+    padding-top: 70px; 
+    margin: 20px;         
+    height: auto;      
+    }
+    .hero-text h1{
+        font-size: 20px;
+    }
+    .hero h4{
+        font-size: 25px;
+    }
+    .hero-text {
+        max-width: 100%;
+        text-align:left;   
+        margin-right: 20px  
+    }
+    .hero-text {
+    text-align: left;
+    margin-right: 30px;       
+    }
+    .hero-text h1 {
+    font-size: 30px;
+    }
+
+    .hero img {
+    width: 450px;
+    margin-top: 10px;  
+    }
+    .wavy-section {
+    margin-top: 0;     
+    padding-top: 30px; 
+    }
+
+    .content-container img{
+        width:160px;
+    }
+    .wavy-section{
+        height: 50vh;
+        width: 60vh;
+    }
+    .text-content h2{
+        font-size: 16px;
+    }
+    .text-content p{
+        font-size: 12px;
+    }
+    .in h2{
+        font-size: 35px;
+    }
+    .in p{
+        font-size: 15px;
+    }
+    .product-contener{
+        gap: 0px;
+    }
+    .product-card{
+        width: 30%;
+        height: 20%;
+        gap: 0px;
+    }
+
+    .product-card #dop{
+        width: 80px;
+    }
+    .product-card h3{
+        font-size: 10PX;
+    }
+    .section{
+        flex-direction: column;
+        height: 50%;
+    }
+    .Story{
+        flex-direction: column;
+        text-align: left;
+    }
+
+    .cardd-last{
+        flex-direction: row;
+    }
+    .cardd{
+        width: 20%;
+        height: 20%;
+        gap: 5px;
+        margin-left: 13px;
+    }
+    .cardd img{
+        width: 100%;
+        height: 50%;
+        
+    }
+    .section{
+        height: auto;
+        padding: 0px;
+    }
+    .section button{
+        margin: 0px;
+    }
+    .peaches img{
+        width: 70%;
+        margin-top: -100px;
+        margin-left: 90px;
+    }
+    .costomer h4{
+        font-size: 30px;
+    }
+    .costomer p{
+        font-size: 17px;
+        width: 100%;
+        padding: 20px;
+        letter-spacing: 1px;
+        line-height: 1.4;
+        margin-top: -14px;
+    }
+    .reviewers img {
+        width: 130px;
+        height: 130px;
+    }
+    .reviewers .reviewer-photo2 img{
+        width: 130px;
+        height: 130px;
+    }
+
+    .costomer{
+        display: flex;
+        flex-direction: column;
+        margin-top: 24px;
+        text-align: center;
+    }
+    .costomer h6{
+    font-size: 25px;
+    color: #529e3b;
+    margin-left: 0px;
+    text-align: center;
+}
+.costomer h5{
+    font-size: 18px;
+        text-align: center;
+        color:gray;
+        margin-left: 0px;
+    }
+    .reviewers{
+        display: flex;
+        flex-wrap: wrap;
+        padding:0 12px;
+    }
+    .sta{
+        margin-top: -24px;
+        margin-bottom: -1px;
+    }
+    .footer{
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+    .footer-logo h2,.footer-links h3 ,.center h2{
+        font-size: 24px;
+    }
+    .footer-logo p{
+        font-size: 12px;
+    }
+    .footer-links a{
+        font-size: 12px !important;
+    }
+    .title-footer h3{
+        color: white;
+    }
+    .footer-gallery{
+        order: 4;
+    }
+
+
+}
+
+
+
+@media (min-width: 428px) and (max-width: 820px){
+.hero{
+    height: 55vh;
+}
+.hero img{
+    width: 52%;
+}
+.hero-text h4{
+    font-size: 32px;
 }
 .hero-text h1{
-    font-size: 20px;
+    font-size: 42px;
 }
-.hero-text {
-    max-width: 100%;
-    text-align:left;   
-    margin-right: 20px  
-  }
-.hero-text {
-  text-align: left;
-  margin-right: 30px;       
+.cardd {
+    width: 22.5%;
 }
-.hero-text h1 {
-  font-size: 30px;
-}
-
-.hero img {
-  width: 450px;
-  margin-top: 10px;  
-}
-.wavy-section {
-  margin-top: 0;     
-  padding-top: 30px; 
-}
-
-.content-container img{
-    width:160px;
-  }
-.wavy-section{
-    height: 50vh;
-    width: 60vh;
-}
-.text-content h2{
-    font-size: 16px;
-  }
-.text-content p{
-    font-size: 12px;
-  }
-.in h2{
-    font-size: 35px;
-}
-.in p{
-    font-size: 15px;
-}
-.product-contener{
-    gap: 0px;
-}
-.product-card{
-    width: 30%;
-    height: 20%;
-    gap: 0px;
-}
-
-.product-card #dop{
-    width: 80px;
-}
-.product-card h3{
-    font-size: 10PX;
-}
-.section{
-    flex-direction: column;
-    height: 50%;
-}
- .Story{
-    flex-direction: column;
-    text-align: left;
-}
-
 .cardd-last{
-    flex-direction: row;
+    justify-content: center;
 }
-.cardd{
-    width: 20%;
-    height: 20%;
-    gap: 5px;
-    margin-left: 13px;
+    .costomer{
+        display: flex;
+        flex-direction: column;
+        margin-top: 24px;
+        text-align: center;
+    }
+    .costomer h6{
+    font-size: 40px;
+    color: #529e3b;
+    margin-left: 0px;
+    text-align: center;
 }
-.cardd img{
-    width: 100%;
-    height: 50%;
-    
-}
-.section{
-    height: auto;
-    padding: 0px;
-}
-.section button{
-    margin: 0px;
-}
-.peaches img{
-    width: 70%;
-    margin-top: -100px;
-    margin-left: 90px;
-}
-.costomer{
-    margin-top: 0px;
-}
-.costomer h4{
-    font-size: 30px;
-}
-.costomer p{
-    font-size: 17px
-}
-.reviewers img {
-    width: 130px;
-    height: 130px;
-}
-.reviewers .reviewer-photo2 img{
-    width: 130px;
-    height: 130px;
-}
-.footer{
-    height: 70vh;
-    flex-wrap: wrap ;
-    display: flex;
-}
-.footer-logo h2,.footer-links h3 ,.center h2{
-    font-size: 24px;
-}
-.footer-logo p{
-    font-size: 12px;
-}
- .footer-links a{
-    font-size: 12px !important;
- }
- .title-footer h3{
-    color: white;
- }
+    .costomer h5{
+        font-size: 24px;
+        text-align: center;
+        color:gray;
+        margin-left: 0px;
+    }
+        .costomer p{
+        font-size: 19px;
+        width: 100%;
+        padding: 8px;
+        letter-spacing: 1px;
+        line-height: 1.4;
+        margin-top: -1px;
+    }
+    .sta{
+        margin-top: -16px;
+        margin-bottom: -4px;
+    }
 
 }
