--- a/CSS/about.css
+++ b/CSS/about.css
@@ -598,37 +598,7 @@ nav a {
   list-style: none;
 }
 
-@media (max-width: 428px) {
-  .hamburger {
-    display: block;
-  }
 
-.navbar ul.menu {
-    position: fixed;
-    left: -250px; 
-    top: 0;
-    height: 100%;
-    width: 250px;
-    background-color: #fff;
-    flex-direction: column;
-    padding: 60px 20px;
-    gap: 15px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.2);
-    transition: left 0.3s ease;
-    z-index: 1000;
-  }
-
-#menu-toggle:checked + .hamburger + ul.menu {
-    left: 0;
-  }
-
-.container-logo p {
-    font-size: 20px;
-  }
-#leaf {
-    width: 30px;
-  }
-}
 .contact-info {
     max-width: 100%;
     text-align: left;
@@ -663,20 +633,50 @@ nav a {
     font-size: 60px;
   }
 
-@media (max-width: 428px) {
-.img {
-  height: 25vh;              
-  font-size: 36px;           
-  margin-top: 80px;          
-  box-shadow: 0 2px 12px rgba(76,175,80,0.15);
-  background-size: cover;
-  background-position: center;
-  padding: 0 10px;
-  }
-}
+
 
 /* about */
 @media screen and (max-width: 428px) {
+   .hamburger {
+      display: block;
+    }
+
+  .navbar ul.menu {
+      position: fixed;
+      left: -250px; 
+      top: 0;
+      height: 100%;
+      width: 250px;
+      background-color: #fff;
+      flex-direction: column;
+      padding: 60px 20px;
+      gap: 15px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+      transition: left 0.3s ease;
+      z-index: 1000;
+    }
+
+  #menu-toggle:checked + .hamburger + ul.menu {
+      left: 0;
+    }
+
+  .container-logo p {
+      font-size: 20px;
+    }
+  #leaf {
+      width: 30px;
+    }
+
+  .img {
+    height: 40vh;              
+    font-size: 36px;           
+    margin-top: 80px;          
+    box-shadow: 0 2px 12px rgba(76,175,80,0.15);
+    background-size: cover;
+    background-position: center;
+    padding: 0 10px;
+    }
+
 .about {
   flex-direction: row;    
   gap: 2px;
@@ -737,16 +737,12 @@ nav a {
   font-size: 12px;
   padding: 6px 14px;
   }
-}
-@media screen and (max-width: 428px) {
-.offer {
+  .offer {
   flex-direction: row;    
   gap: 2px;
   padding: 20px 15px;
   height: auto;
 }
-}
-@media (max-width: 428px) {
 .values {
   padding: 30px 10px; 
 }
@@ -783,15 +779,29 @@ nav a {
   width: 24px;
   height: 24px;
   }
-}
-
-@media (max-width: 428px) {
-.you .images {
+  .you .images {
   width: 100%;
   height:200px
 }
 .you .images img{
   width:50% ;
+}
+.footer{
+  display: grid;
+  grid-template-columns: auto auto;
+}
+.footer-gallery{
+  order: 4;
+}
+
+}
+
+@media (min-width: 428px) and (max-width: 820px){
+.tag{
+  font-size: 32px;
+}
+.value-card{
+  display: grid;
 }
 }
 
